--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_bloc: ^8.1.3
   device_preview: ^1.2.0
-
+  dio: ^4.0.0
+  data_connection_checker_tv: ^0.3.5-nullsafety
+  shared_preferences: ^2.3.3
+  http: ^1.1.0
+  provider: ^6.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
