--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   shared_preferences: ^2.3.3
   http: ^1.1.0
   provider: ^6.0.5
-  speech_to_text: ^7.2.0
+  record: ^6.0.0
+  path_provider: ^2.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
